# wealthz

./: .env.test  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
tests/: conftest.py  test_cli.py  test_factories.py  test_fetchers.py  test_foo.py  test_loaders.py  test_runner.py  test_secrets.py  test_transforms.py
tests/fixtures/: ducklake_etl_pipeline.yaml  gsheet_etl_pipeline.yaml  people_etl_pipeline.yaml  yfinance_etl_pipeline.yaml
wealthz/: cli.py  constants.py  factories.py  fetchers.py  loaders.py  logutils.py  model.py  runner.py  secrets.py  settings.py  transforms.py  utils.py
